# sqlkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
scripts/: dev.py  install.py
sqlkit/: __init__.py
sqlkit/config/: __init__.py  loader.py  registry.py  schema.py
sqlkit/core/: __init__.py  column.py  factory.py  table.py  type_parser.py
sqlkit/dialects/: __init__.py  athena.py  mysql.py  oracle.py  postgresql.py  redshift.py  sqlite.py
sqlkit/operations/: base.py  ddl.py  dml.py  special.py
sqlkit/tests/: __init__.py  base.py  conftest.py  test_flexible_types.py  test_numeric_types.py
sqlkit/tests/config/: __init__.py  test_dialects_integration.py  test_loader.py  test_registry.py  test_schema.py
sqlkit/tests/config/file/: config.yaml  config_default_dialect_schema.yaml  config_override_dialect.yaml  config_override_schema.yaml  invalid.yaml
sqlkit/tests/core/: __init__.py  test_column.py  test_factory.py  test_table.py
sqlkit/tests/dialects/: __init__.py  test_redshift.py
sqlkit/tests/operations/: __init__.py  test_base.py  test_ddl.py
